--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>Maven-test</groupId>
     <artifactId>Maven-test</artifactId>
-    <version>1.1.19-SNAPSHOT</version>
+    <version>1.1.19</version>
 
     <properties>
         <projectKey>QA</projectKey>
@@ -31,6 +31,6 @@
         <connection>scm:git:git@github.com:Sionin/Maven-test.git</connection>
         <url>scm:git:git@github.com:Sionin/Maven-test.git</url>
         <developerConnection>scm:git:git@github.com:Sionin/Maven-test.git</developerConnection>
-        <tag>Maven-test-1.1.16</tag>
+        <tag>Maven-test-1.1.19</tag>
     </scm>
 </project>
