--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,8 @@
     <version>1.1.20-SNAPSHOT</version>
 
     <properties>
-        <projectKey>QA</projectKey>
+        <jira.project.key>QA</jira.project.key>
+        <changes.file>${basedir}/changes2.txt</changes.file>
     </properties>
 
     <parent>
