--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,31 @@
         </dependency>
     </dependencies>
 
+    <profiles>
+            <profile>
+                <id>release</id>
+                <activation>
+                    <property>
+                        <name>performRelease</name>
+                    </property>
+                </activation>
+                <build>
+                    <plugins>
+                        <plugin>
+                            <artifactId>maven-surefire-plugin</artifactId>
+                            <executions>
+                                <execution>
+                                    <goals>
+                                        <goal>test</goal>
+                                    </goals>
+                                </execution>
+                            </executions>
+                        </plugin>
+                    </plugins>
+                </build>
+            </profile>
+        </profiles>
+
 
     <scm>
         <connection>scm:git:git@github.com:Sionin/Maven-test.git</connection>
