--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,6 @@
         <connection>scm:git:git@github.com:Sionin/Maven-test.git</connection>
         <url>scm:git:git@github.com:Sionin/Maven-test.git</url>
         <developerConnection>scm:git:git@github.com:Sionin/Maven-test.git</developerConnection>
-        <tag>bugfix</tag>
+        <tag>Maven-test-1.1.25</tag>
     </scm>
 </project>
