--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>Maven-test</groupId>
     <artifactId>Maven-test</artifactId>
-    <version>1.1.30-bugfix.1</version>
+    <version>1.1.30-bugfix.7-SNAPSHOT</version>
 
     <properties>
         <jira.project.key>QA</jira.project.key>
